syntax = "proto3";

package common;

message IceCandidate {
    string candidate = 1;
    optional string sdpMid = 2;
    optional uint32 sdpMLineIndex = 3;
}
